@@ -141,7 +141,7 @@ public class FixLenDataFormatter implements Formatter {
 	 */
     Character fieldFiller;
 	public void setFieldFiller(char filler) {
-        this.fieldFiller = new Character(filler);
+        this.fieldFiller = Character.valueOf(filler);
 	}
 
     public Character getFieldFiller() {
@@ -150,7 +150,7 @@ public class FixLenDataFormatter implements Formatter {
 
     Character recordFiller;
 	public void setRecordFiller(char filler) {
-        this.recordFiller = new Character(recordFiller);
+        this.recordFiller = Character.valueOf(recordFiller);
 	}
 
     public Character getRecordFiller() {
@@ -196,7 +196,7 @@ public class FixLenDataFormatter implements Formatter {
 		// find gaps
 		SortedMap<Integer, Integer> smap = new TreeMap<Integer, Integer>();
 		for (int fieldIdx = 0; fieldIdx < fieldCnt; fieldIdx++) {
-			smap.put(new Integer(fieldStart[fieldIdx]), new Integer(fieldIdx));
+			smap.put(new Integer(fieldStart[fieldIdx]), Integer.valueOf(fieldIdx));
 		}
 		ArrayList<Integer> gapStartList = new ArrayList<Integer>();
 		ArrayList<Integer> gapEndList = new ArrayList<Integer>();
